Removed PrivilegedAction and AccessController usages
Signed-off-by: David Matějček <david.matejcek@omnifish.ee>